--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,46 +7,113 @@
     <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <section class="conteúdo-principal">
-        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">Meus objetivos do ano <span>_</span></h2>
 
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Ir bem nas provas</button>
-                <button class="botao">Terminar o ensino médio</button>
-                <button class="botao">Achar um serviço relacionado a faculdade a qual quero fazer</button>
-                <button class="botao">Fazer a faculdade dos sonhos</button>
+                <button class="botao">Fazer uma academia</button>
+                <button class="botao">comprar uma lamborghini</button>
+                <button class="botao">Ser milionario</button>
+                <button class="botao">ter uma quadra de basquete</button>
+
             </div>
 
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Ir bem nas provas</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Fazer uma academia</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias0">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas0">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="min0">7</p>
+                            <p class="contador-digito-texto">minutos</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="seg0">7</p>
+                            <p class="contador-digito-texto">segundos</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Terminar o ensino médio</h3>
+                    <h3 class="aba-conteudo-titulo-principal">comprar uma lamborghini</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias1">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas1">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="min1">7</p>
+                            <p class="contador-digito-texto">minutos</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="seg1">7</p>
+                            <p class="contador-digito-texto">segundos</p>
+                        </div><div class="contador-digito">
+                            
+                    </div>
+                </div>    
+               <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Ser milionario</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias2">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas2">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="min2">7</p>
+                            <p class="contador-digito-texto">minutos</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="seg2">7</p>
+                            <p class="contador-digito-texto">segundos</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Achar um serviço relacionado a faculdade a qual quero
-                        fazer</h3>
+                    <h3 class="aba-conteudo-titulo-principal">ter uma quadra de basquete</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
-                </div>
-                <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Fazer a faculdade dos sonhos</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
-                </div>
-            </div>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias3">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas3">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="min3">7</p>
+                            <p class="contador-digito-texto">minutos</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero"id="seg3">7</p>
+                            <p class="contador-digito-texto">segundos</p>
+                        </div>
+                    </div>
+                </div>        
+           </div>
         </div>
     </section>
     <script src="main.js"></script>
-
 </body>
 
 </html>
