--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-<!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Meus Objetivos no ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus objetivos do ano <span>_</span></h2>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
 
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao">Fazer uma academia</button>
-                <button class="botao">comprar uma lamborghini</button>
-                <button class="botao">Ser milionario</button>
-                <button class="botao">ter uma quadra de basquete</button>
-
+                <button class="botao ativo">Concluir o Ensino Médio</button>
+                <button class="botao">Começar uma faculdade</button>
+                <button class="botao">Comprar um celular</button>
+                <button class="botao">Ver a nota do ENEM</button>
             </div>
 
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Fazer uma academia</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Concluir o Ensino Médio</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -34,17 +34,17 @@
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="min0">7</p>
+                            <p class="contador-digito-numero" id="min0">7</p>
                             <p class="contador-digito-texto">minutos</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="seg0">7</p>
+                            <p class="contador-digito-numero" id="seg0">7</p>
                             <p class="contador-digito-texto">segundos</p>
                         </div>
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">comprar uma lamborghini</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Morar Sozinho</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -56,18 +56,18 @@
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="min1">7</p>
+                            <p class="contador-digito-numero" id="min1">7</p>
                             <p class="contador-digito-texto">minutos</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="seg1">7</p>
+                            <p class="contador-digito-numero" id="seg1">7</p>
                             <p class="contador-digito-texto">segundos</p>
-                        </div><div class="contador-digito">
-                            
+                        </div>
+
                     </div>
-                </div>    
-               <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Ser milionario</h3>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Passar No Vestibular</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -79,17 +79,18 @@
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="min2">7</p>
+                            <p class="contador-digito-numero" id="min2">7</p>
                             <p class="contador-digito-texto">minutos</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="seg2">7</p>
+                            <p class="contador-digito-numero" id="seg2">7</p>
                             <p class="contador-digito-texto">segundos</p>
                         </div>
+
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">ter uma quadra de basquete</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Começar Uma Faculdade</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -101,19 +102,21 @@
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="min3">7</p>
+                            <p class="contador-digito-numero" id="min3">7</p>
                             <p class="contador-digito-texto">minutos</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="seg3">7</p>
+                            <p class="contador-digito-numero" id="seg3">7</p>
                             <p class="contador-digito-texto">segundos</p>
                         </div>
+
                     </div>
-                </div>        
-           </div>
+                </div>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
+
 </body>
 
 </html>
